--- a/home/am.html
+++ b/home/am.html
@@ -1,3 +1,64 @@
-<div>
-    wenzhang
+<div class="amall">
+    <div class="ambk">
+        <div class="amhead">
+            所有内容
+        </div>
+        <div class="amcontents">
+            <table class="amtable" border="1" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>相关内容</th>
+                        <th>所属分类</th>
+                        <th>是否发布</th>
+                        <th>是否推荐</th>
+                        <th>查看权限</th>
+                        <th>点赞人数</th>
+                        <th>观看人数</th>
+                        <th>审核状态</th>
+                        <th>相关操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>相关内容</td>
+                        <td>$相关内容</td>
+                        <td>相关内容</td>
+                        <td>$相关内容</td>
+                        <td>相关内容</td>
+                        <td>$相关内容</td>
+                        <td>相关内容</td>
+                        <td>$相关内容</td>
+                        <td>相关内容</td>
+                    </tr>
+                    <tr>
+                        <td>相关内容</td>
+                        <td>$相关内容</td>
+                        <td>相关内容</td>
+                        <td>$相关内容</td>
+                        <td>相关内容</td>
+                        <td>$相关内容</td>
+                        <td>相关内容</td>
+                        <td>$相关内容</td>
+                        <td>相关内容</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td>相关内容</td>
+                        <td>$相关内容</td>
+                        <td>相关内容</td>
+                        <td>$相关内容</td>
+                        <td>相关内容</td>
+                        <td>$相关内容</td>
+                        <td>相关内容</td>
+                        <td>$相关内容</td>
+                        <td>相关内容</td>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+        <div>
+            底部
+        </div>
+    </div>
 </div>
