--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <p>
                     <span>密码</span>
                     <span>
-                        <input type="text" name="" id="password" class="inputsub">
+                        <input type="password" name="" id="password" class="inputsub">
                     </span>
                 </p>
             </div>
