--- a/head.html
+++ b/head.html
@@ -88,7 +88,9 @@
             },
             success: function (data) {
                 if (data.code == 1) {
-                    $.cookie('real-home-token', data.data.token,{path:'/'});
+                    $.cookie('real-home-token', data.data.token, {
+                        path: '/'
+                    });
                     $(".imghead").attr("isClick", 'true');
                     $("#bgsub").hide();
                     myContent();
@@ -103,7 +105,9 @@
     });
     //退出事件
     $(".loginOut").click(function () {
-        $.cookie('real-home-token', '',{path:'/'});
+        $.cookie('real-home-token', '', {
+            path: '/'
+        });
         $(".imghead").attr("isClick", 'false');
         $(".con-right-my").html(
             '<div class="con-right-all"><div class="my-some-title">我的作品>>></div><div class="con-right-nr con-right-myself"><img src="/static/common/img/timg.gif" alt="" style="width:200px; height:200px;"><p class="submit"><span>请登录。。。</span></p></div><div class="M-box1 m-style m-style-right my-box"></div></div>'
