--- a/home/all.html
+++ b/home/all.html
@@ -23,13 +23,13 @@
             <div class="amid-left">
                 <div class="amid-left-top">
                     <div class="left-top-img">
-                        <img src="/static/home/img/admin-tou.jpg" alt="" title='头像' class="img-tou">
+                        <img src="/static/common/img/userhead.jpg" alt="" title='头像' class="img-tou">
                     </div>
                     <div class="left-top-mess">
-                        <p>账&nbsp;&nbsp;&nbsp;&nbsp;号:<span>admin</span></p>
-                        <p>用户名:<span>admin</span></p>
-                        <p>性&nbsp;&nbsp;&nbsp;&nbsp;别:<span>admin</span></p>
-                        <p>年&nbsp;&nbsp;&nbsp;&nbsp;龄:<span>admin</span></p>
+                        <p>账&nbsp;&nbsp;&nbsp;&nbsp;号:<span class="alzh"></span></p>
+                        <p>用户名:<span class="almz"></span></p>
+                        <p>性&nbsp;&nbsp;&nbsp;&nbsp;别:<span class="alsex"></span></p>
+                        <p>年&nbsp;&nbsp;&nbsp;&nbsp;龄:<span class="alage"></span></p>
                     </div>
                 </div>
                 <hr>
@@ -38,12 +38,14 @@
                         <p>>>>All Things</p>
                     </div>
                     <div class="amid-left-lis">
-                            <p class="amid-p" val='0'>首页展示</p>
-                            <p class="amid-p" val='1'>个人资料</p>
-                            <p class="amid-p" val='2'>文章相关</p>
-                            <p class="amid-p" val='3'>图片相关</p>
-                            <p class="amid-p" val='4'>信息相关</p>
-                            <p class="amid-p" val='5'>其他</p>
+                        <p class="amid-p" val='0'>首页展示</p>
+                        <p class="amid-p" val='1'>个人资料</p>
+                        <p class="amid-p" val='2'>文章相关</p>
+                        <p class="amid-p" val='3'>图片相关</p>
+                        <p class="amid-p" val='4'>信息相关</p>
+                    </div>
+                    <div>
+                        <p class="outshou">返回首页</p>
                     </div>
 
                 </div>
@@ -63,5 +65,5 @@
 
 </html>
 <script src="/static/common/js/common.js"></script>
-<script src="/static/home/js/index.js"></script>
+<!-- <script src="/static/home/js/index.js"></script> -->
 <script src="/static/home/js/all.js"></script>
