--- a/home/am.html
+++ b/home/am.html
@@ -110,6 +110,10 @@
                         showData: yema.per_page,
                         current: yema.current_page,
                         coping: true,
+                        // pageCount: yema.total_page,
+                        // showData: yema.per_page,
+                        // current: yema.current_page,
+                        // mode: 'fixed',
                         callback: function (api) {
                             $.ajax({
                                 type: "GET",
