--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
         <div class="det-index">
             <div class="button-close-det">关闭</div>
             <div class="det-head">
-                <span>分类:红袖添香</span>
+                <img src="/static/common/img/timg.gif" alt="" style="width: 30px;">
+                <!-- <span>分类:红袖添香</span>
                 <span>&nbsp;&nbsp;</span>
                 <span>点赞(100)</span>
                 <span>&nbsp;&nbsp;</span>
@@ -121,13 +122,14 @@
                 <span>&nbsp;&nbsp;</span>
                 <span>作者:admin</span>
                 <span>&nbsp;&nbsp;</span>
-                <span>时间:2018-10-08 14:00:00</span>
+                <span>时间:2018-10-08 14:00:00</span> -->
             </div>
             <div class="det-mid">
                 <div class="det-mid-left">
                     <div class="det-mid-content">
+
                         <div class="det-mid-text">
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;今天天气不是很好，天空有些阴沉，一片荒凉惨淡，刚刚还下起了蒙蒙细雨。这样的天气，似乎注定会使人觉得无味。想想晚上得知的消息，真的难以入眠今天天气不是很好，天空有些阴沉，一片荒凉惨淡，刚刚还下起了蒙蒙细雨。这样的天气，似乎注定会使人觉得无味。想想晚上得知的消息，真的难以入眠今天天气不是很好，天空有些阴沉，一片荒凉惨淡，刚刚还下起了蒙蒙细雨。这样的天气，似乎注定会使人觉得无味。想想晚上得知的消息，真的难以入眠今天天气不是很好，天空有些阴沉，一片荒凉惨淡，刚刚还下起了蒙蒙细雨。这样的天气，似乎注定会使人觉得无味。想想晚上得知的消息，真的难
+                            <img src="/static/common/img/timg.gif" alt="" style="width: 300px;">
                         </div>
 
                     </div>
@@ -141,7 +143,8 @@
                     </div>
                 </div>
                 <div class="det-mid-right">
-                    <div class="det-mid-right-comments">
+                    <img src="/static/common/img/timg.gif" alt="" style="width: 260px;">
+                    <!-- <div class="det-mid-right-comments">
                         <div class="comment-author"><span class="author-comment">小茶</span>评论</div>
                         <div class="comment-comment">
                             这是第一条评论dasdaasdsadasdasdsadasd
@@ -152,131 +155,13 @@
                                     <span>小三</span>回复<span>小茶</span>
                                 </div>
                                 <div class="comment-reply-text">
-                                    第二条评论的回复dasdasdsadsadsadsadas
+                                    第二条评论的回复dasdhjjjhhjkhjkhkasdsadsadsadsadas
                                 </div>
                             </div>
                         </div>
 
-                    </div>
-                    <div class="det-mid-right-comments">
-                        <div class="comment-author"><span class="author-comment">小茶</span>评论</div>
-                        <div class="comment-comment">
-                            这是第二条评论
-                        </div>
-                        <div class="comment-replys">
-                            <div class="comment-reply">
-                                <div>
-                                    <span>小三</span>回复<span>小茶</span>
-                                </div>
-                                <div class="comment-reply-text">
-                                    第二条评论的回复dasdasdsadsadsadsadas
-                                </div>
-                            </div>
-                            <div class="comment-reply">
-                                <div>
-                                    <span>小三</span>回复<span>小茶</span>
-                                </div>
-                                <div class="comment-reply-text">
-                                    第二条评论的回复dasdasdsadsadsadsadas
-                                </div>
-                            </div>
-                            <div class="comment-reply">
-                                <div>
-                                    <span>小三</span>回复<span>小茶</span>
-                                </div>
-                                <div class="comment-reply-text">
-                                    第二条评论的回复dasdasdsadsadsadsadas
-                                </div>
-                            </div>
+                    </div>      -->
 
-                        </div>
-
-                    </div>
-                    <div class="det-mid-right-comments">
-                        <div class="comment-author"><span class="author-comment">小茶</span>评论</div>
-                        <div class="comment-comment">
-                            这是第三条评论
-                        </div>
-                        <div class="comment-replys">
-                            <div class="comment-reply">
-                                <div>
-                                    <span>小三</span>回复<span>小茶</span>
-                                </div>
-                                <div class="comment-reply-text">
-                                    第二条评论的回复dasdasdsadsadsadsadas
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="det-mid-right-comments">
-                        <div class="comment-author"><span class="author-comment">小茶</span>评论</div>
-                        <div class="comment-comment">
-                            这是第二条评论
-                        </div>
-                        <div class="comment-replys">
-                            <div class="comment-reply">
-                                <div>
-                                    <span>小三</span>回复<span>小茶</span>
-                                </div>
-                                <div class="comment-reply-text">
-                                    第二条评论的回复dasdasdsadsadsadsadas
-                                </div>
-                            </div>
-                            <div class="comment-reply">
-                                <div>
-                                    <span>小三</span>回复<span>小茶</span>
-                                </div>
-                                <div class="comment-reply-text">
-                                    第二条评论的回复dasdasdsadsadsadsadas
-                                </div>
-                            </div>
-                            <div class="comment-reply">
-                                <div>
-                                    <span>小三</span>回复<span>小茶</span>
-                                </div>
-                                <div class="comment-reply-text">
-                                    第二条评论的回复dasdasdsadsadsadsadas
-                                </div>
-                            </div>
-
-                        </div>
-
-                    </div>
-                    <div class="det-mid-right-comments">
-                        <div class="comment-author"><span class="author-comment">小茶</span>评论</div>
-                        <div class="comment-comment">
-                            这是第二条评论
-                        </div>
-                        <div class="comment-replys">
-                            <div class="comment-reply">
-                                <div>
-                                    <span>小三</span>回复<span>小茶</span>
-                                </div>
-                                <div class="comment-reply-text">
-                                    第二条评论的回复dasdasdsadsadsadsadas
-                                </div>
-                            </div>
-                            <div class="comment-reply">
-                                <div>
-                                    <span>小三</span>回复<span>小茶</span>
-                                </div>
-                                <div class="comment-reply-text">
-                                    第二条评论的回复dasdasdsadsadsadsadas
-                                </div>
-                            </div>
-                            <div class="comment-reply">
-                                <div>
-                                    <span>小三</span>回复<span>小茶</span>
-                                </div>
-                                <div class="comment-reply-text">
-                                    第二条评论的回复dasdasdsadsadsadsadas
-                                </div>
-                            </div>
-
-                        </div>
-
-                    </div>
                 </div>
             </div>
             <div class="det-bottom">
