--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- 登录页面的背景以及内容相关显示 -->
     <div id="bgsub">
         <div class="sub-index">
-            <div class="button-close">关闭</div>
+            <!-- <div class="button-close">关闭</div>
             <div class="sub-head">遇 见 过 往</div>
             <div class="sub-mid">
                 <p>
@@ -104,7 +104,7 @@
             <div class="sub-bottom">
                 <p class="submitgo">立即登录</p>
                 <p class="submitfog">忘记密码</p>
-            </div>
+            </div> -->
 
         </div>
     </div>
